# my_code_manager

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
src/my_code_organizer/: main.py  window.py
src/my_code_organizer/models/: database.py  project.py
